# gialmisi.github.io

./: .gitignore  404.html  README.md  index.html  pyproject.toml
activities/: index.html
cv/: build_cv.py  cv_template.tex
data/: activities.yaml  career_breaks.yaml  disseminations.yaml  education.yaml  manuscripts.yaml  other_education.yaml  other_merits.yaml  personal.yaml  publications.yaml  research.yaml  supervision.yaml  teaching.yaml
dissemination/: index.html
education/: index.html
macros/: main.py
publications/: index.html
research/: index.html
search/: search_index.json
website/: activities.md  dissemination.md  education.md  index.md  publications.md  research.md
