[project]
name = "gialmisi-github-io"
version = "0.1.0"
description = "My personal homepage."
authors = [{name = "Giovanni Misitano", email = "giovanni.a.misitano@jyu.fi"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.0,<2",
    "mkdocs-material>=9.5.28",
    "mkdocs-include-markdown-plugin>=6.2.1",
    "mkdocs-macros-plugin>=1.0.5",
]
